amelioration sur le site

--- a/winnie.html
+++ b/winnie.html
@@ -9,10 +9,11 @@
   <body>
 
     <div id="winniepicture">
-      <div id="circle">
-        <img src="http://img1.wikia.nocookie.net/__cb20140309201212/disney/images/1/12/Winnie-the-pooh-disneyscreencaps.jpg" alt="winnie torture a butterfly" class="imgwinnie">
-      </div>
-      <div id="circletxt">
+      <div id="entete">
+        <div id="circle">
+          <img src="http://img1.wikia.nocookie.net/__cb20140309201212/disney/images/1/12/Winnie-the-pooh-disneyscreencaps.jpg" alt="winnie torture a butterfly" class="imgwinnie">
+        </div>
+        <p id="circletxt"><span id="w">W</span><span id="i">I</span><span id="n">N</span><span id="nn">N</span><span id="ii">I</span><span id="e">E</span></p>
       </div>
     </div>
 
@@ -44,9 +45,9 @@
 
     <nav>
       <div id="logo">
-        <a id="twitter" href="https://en.wikipedia.org/wiki/Winnie-the-Pooh" target="_blank"><img src="http://iconshow.me/media/images/phone/ios-7-icons/png/512/Twitter.png" alt="twitter"></a>
-        <a id="youtube" href="https://en.wikipedia.org/wiki/Winnie-the-Pooh" target="_blank"><img src="https://rocketdock.com/images/screenshots/Untitled-1-38.png" alt="youtube"></a>
-        <a id="instagram" href="https://en.wikipedia.org/wiki/Winnie-the-Pooh" target="_blank"><img src="https://3.bp.blogspot.com/-bRSA2XI0JBY/V33FuahUINI/AAAAAAAAJFE/bjg8ge6P8zs-vTJEaSx1pjOncD4kdfGqwCLcB/s1600/Instagram_2016_New%2BLogo.png" alt="instagram"></a>
+        <a id="twitter" href="http://nooooooooooooooo.com/" target="_blank"><img src="http://iconshow.me/media/images/phone/ios-7-icons/png/512/Twitter.png" alt="twitter"></a>
+        <a id="youtube" href="http://111111111111111111111111111111111111111111111111111111111111.com/" target="_blank"><img src="https://rocketdock.com/images/screenshots/Untitled-1-38.png" alt="youtube"></a>
+        <a id="instagram" href="http:/ilooklikebarackobama.com" target="_blank"><img src="https://3.bp.blogspot.com/-bRSA2XI0JBY/V33FuahUINI/AAAAAAAAJFE/bjg8ge6P8zs-vTJEaSx1pjOncD4kdfGqwCLcB/s1600/Instagram_2016_New%2BLogo.png" alt="instagram"></a>
       </div>
     </nav>
 
